--- a/templates/detail.html
+++ b/templates/detail.html
@@ -1,5 +1,5 @@
 <ion-view title='{{pageTitle}}' ng-controller="DetailCtrl">
 	<ion-content>
-		<component template="{{template}}"></component>		
+		<div ng-include="detailtemplate"></div>	
 	</ion-content>
 </ion-view>
