--- a/templates/components/list.html
+++ b/templates/components/list.html
@@ -1,13 +1,13 @@
 <ion-list class="list-list">
-	<ion-item ng-repeat="post in posts" class="list-item" href="#/app/ionicpress/{{post.ID}}">
+	<ion-item ng-repeat="post in posts" class="list-item" href="#/app/ionicpress/{{post.id}}">
 
-		<h2 class="post-excerpt" ng-bind-html="post.title"></h2>
+		<h2 class="post-excerpt" ng-bind-html="post.title.rendered"></h2>
 
 		<div class="post-category">
 			<span ng-repeat="term in post.terms.category" ng-bind-html="term.name "></span>
 		</div>
 
-		<p class="post-excerpt" ng-bind-html="post.excerpt"></p>
+		<p class="post-excerpt" ng-bind-html="post.excerpt.rendered"></p>
 
 	</ion-item>
 </ion-list>
