--- a/templates/detail.html
+++ b/templates/detail.html
@@ -1,5 +1,5 @@
 <ion-view title='{{pageTitle}}' ng-controller="DetailCtrl">
-	<ion-content>
-		<div ng-include="detailtemplate"></div>	
+	<ion-content class="ionicpress">
+		<div ng-include="detailtemplate" ng-class="detail"></div>
 	</ion-content>
 </ion-view>
